# textoter

./: .gitignore  CHANGES.txt  README.md  bt.py  pyproject.toml  setup.cfg  setup.py  textoter.glade  textoter.py
data/: textoter.desktop
src/btphonelib/: __init__.py  btphone.py
src/textoter/: __init__.py  textoter.py
