[metadata]
name = textoter
version = 0.9
author = Arnaud Gardelein
author_email = arnaud@oscopy.org
description = A stupid application to send SMS using Bluetooth Phone
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/agardelein/textoter
project_urls =
   Bug Tracker = https://github.com/agardelein/textoter/issues
classifiers =
   Programming Language :: Python :: 3
   License :: OSI Approved :: MIT License
   operating System :: Linux
keywords = gtk sms mms bluetooth phone send texto

[options]
packages = find:
python_requires = >=3.7
